Enhance post editing with media update support
- Refactored `validatePostUpdate` to validate `PostDTO` instead of entire `Post`.
- Added `updateMedia` method to handle media additions and deletions during post edits, including S3 cleanup.
- Updated frontend to manage existing and newly attached media separately during edits.
- Enhanced UI for editing posts to support media management.